--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     
    <div class="summary"
-  <p>Solution driven, customer focused business analyst with 7 years of experience in requirements gathering, quality assurance testing, data analysis, and technical/functional documentation. Interested in new innovative technologies, business intelligence, project management methodology, and business strategy.</P>
+  <p>Solution driven, customer focused business analyst with 7 years of experience in requirements gathering, quality assurance testing, data analysis, and technical/functional documentation. Interested in new technologies, business strategy, health, and fitness.</P>
   </div>
   
   <div class="exp-header">
