--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       
 <div class="details">
     <ul>
-      <li>Successfully pioneered the business analyst role at new client sites to showcase the capabilities of Daugherty's service increasing project and personnel demand.</li>
+      <li>Pioneered the business analyst role at new client sites to showcase the capabilities of Daugherty's service offering increasing project and personnel demand.</li>
       <li>Led discovery workshops to identify gaps in existing and proposed solutions that require closure to realize the accomplishment of business goals and objectives.</li>
       <li>Drove the development of business cases and solution proposals in support of improved functionality with regard to Return on Investment (ROI) and long-term firm benefit.</li>
       <li>Established post go-live support protocols and necessary training to support new or modified systems and processes.</li>
